--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p><b>E-mail:</b> thatianamattos25@gmail.com - <b>Telefone:</b> (13) 99137-7346</p>
     <p>Vila São Jorge - São Vicente/SP</p>
-    <p><a href="https://www.linkedin.com/in/Thatianamattos/" target="_blank">LinkedIn</a>
+    <p><a href="https://www.linkedin.com/in/thatianamattos/" target="_blank">LinkedIn</a>
     </p>
     <p><a href="https://github.com/ThatianaMattos" target="_blank">GitHub</a>
     </p>
@@ -57,7 +57,7 @@
            	Conquistando um grande número de novos clientes através das redes sociais, trazendo grandes resultados e destaques <br>
             </p>
             <br>
-            <P><b>Farmácia Saint Claire Ltda. (04/1999 –01/2019)</b></P>
+            <p><b>Farmácia Saint Claire Ltda. (04/1999 –01/2019)</b></p>
             <br>
             <p><b>Cargo: Suporte Técnico da Analista de Sistemas (09/2008 - 01/2019)</b></p>
             <br>
