--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p><b>E-mail:</b> thatianamattos25@gmail.com - <b>Telefone:</b> (13) 99137-7346</p>
     <p>Vila São Jorge - São Vicente/SP</p>
-    <p><a href="https://www.linkedin.com/in/thatianamattos/" target="_blank">LinkedIn</a>
+    <p><a href="https://www.linkedin.com/in/thatiana-mattos/" target="_blank">LinkedIn</a>
     </p>
     <p><a href="https://github.com/ThatianaMattos" target="_blank">GitHub</a>
     </p>
