--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Área de TI com foco em Desenvolvedora Web Front-End Jr </p>
     <h2>Resumo Profissional</h2>
     <hr>
-    <p>Graduanda em Análise e Desenvolvimento de Sistemas, com especialização em Java Script, HTML e CSS, com ampla vivência na área de informática. Realizando atividades como suporte técnico da analista de sistemas, mapeando as redes com o servidor e implantação do sistema PHP entre PC´S, Notebooks e tablets e manutenção dos mesmos. Conhecimento no sistema PHP, além de habilidades nas ferramentas Excel, Word e Power Point.</p>
+    <p>Graduação em Análise e Desenvolvimento de Sistemas, com especialização em Java Script, HTML e CSS, em busca de uma primeira oportunidade de trabalho. </p>
 
     <h2>Formação Acadêmica</h2>
     <hr>
