--- a/index.html
+++ b/index.html
@@ -89,14 +89,19 @@
 
 	Digitação de posologia de receitas<br><br>
 </p>
-<h2>Qualificações e Atividades Complementares</h2>
+<h2>Cursos e Certificaçõess</h2>
 <hr>
-<p>	Curso de Informática – SOS Computadores–160horas<br>
+<p>		Udemy Cursos Online – Dominando Git e GitHub  - Do iniciante ao expert (2023)<br>
+    	Udemy Cursos Onlin – Visual Studio Code: Produtividade Absoluta (2023) <br>
+    	IBM SkillsBuild – Noções básicas de programação (2023) <br>
     	Curso de Lógica de Programação – SENAI –14 horas<br>
     	Curso de Programação de Soluções Computacionais – Anhembi Morumbi –160horas<br>
     	Curso de Análise de dados – Ecossistema Anima – 10 horas<br>
     	Curso de HTML – JDEV Treinamento – 20 horas <br>
     	Curso de CSS – JDEV Treinamento – 20 horas <br>
+    	Wizard Idiomas – Unidade SV – Inglês básico – médio (nível 5) - (2003) <br>
+    	Curso de Informática – SOS Computadores–160horas <br>
+
     </p>
     <h3>Informações Adicionais</h3>
     <hr>
@@ -104,23 +109,6 @@
         	Conhecimento em sistemas e ferramentas: Java Script, HTML e CSS<br>
         	CNH – AB<br>
         	Disponibilidade para viagens <br>
-        </p>
-        <h2>Cursos:</h2>
-        <!-- Dps do <p> usei <b> pra deixar em negrito -->
-            <p><b>Wizard Idiomas - Unidade São Vicente </b>
-                <br>
-                <br>Inglês básico - médio (nível 5) (2003)
-                </p>
-        <p><b>Udemy Cursos Online</b>
-        <br>Dominando Git e GitHub - Do iniciante ao expert (2023)    
-        </p>
-        <p><b>Udemy Cursos Online</b>
-        <br>Visual Studio Code: Produtividade Absoluta (2023)   
-        </p>
-        <p><b>IBM SkillsBuild</b>
-        <br>Noções básicas de programação (2023)
-        </p>
-
-         
+             
 </body>
 </html>
