--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 </p>
 <h2>Cursos e Certificaçõess</h2>
 <hr>
-<p>		Udemy Cursos Online – Dominando Git e GitHub  - Do iniciante ao expert (2023)<br>
+<p>	
+    	Udemy Cursos Online – Lógica de Programação com JavaScript, Iniciando no Front-end (2023)
+    	Udemy Cursos Online – Dominando Git e GitHub  - Do iniciante ao expert (2023)<br>
     	Udemy Cursos Onlin – Visual Studio Code: Produtividade Absoluta (2023) <br>
     	IBM SkillsBuild – Noções básicas de programação (2023) <br>
     	Curso de Lógica de Programação – SENAI –14 horas<br>
