adicionando foto para o curriculo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body style="background-color: rgb(65, 173, 227);">
      <!-- <h2 style= "color:rgb(70, 55, 204);">meu nome</h2> -->
      <center>
+        <img src="foto.jpeg" alt="" style="width: 50px; border-radius: 100%;">
     <h1 style="color: blueviolet;">Thatiana Mattos
     </h1> 
 
